# Camera_jetson

camera1-1/: CMakeLists.txt  README.md  package.xml
camera1-1/src/: sub_jetson.cpp
camera1-2/: README.md
camera2-1/: CMakeLists.txt  README.md
camera2-1/src/: sub_jetson.cpp  sub_wsl.cpp
camera2-2/: README.md
camera2-2/src/: sub_jetson.cpp
